--- a/server/views/index.html
+++ b/server/views/index.html
@@ -9,14 +9,35 @@
     <h1>{{ title }}</h1>
   </div>
 
-  <form method="post" action="/submit">
-    <input type="number" name="totalPeople" placeholder="Enter the total number of people...">
-    <input type="number" name="chunkSize" placeholder="Enter the desired number of chunks...">
-    <input type="submit" value="Chunk">
+  <form method="post" action="/submit" class="form-horizontal">
+    <div class="form-group">
+      <label for="inputTotalPeople" class="col-sm-2 control-label">Total</label>
+      <div class="col-sm-10">
+        <input type="number" name="totalPeople" class="form-control" placeholder="Enter the total number of people...">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputChunks" class="col-sm-2 control-label">Chunks</label>
+      <div class="col-sm-10">
+        <input type="number" name="chunkSize" class="form-control" placeholder="Enter the desired number of chunks...">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" value="Chunk" class="btn btn-default">Chunk!</button>
+      </div>
+    </div>
   </form>
 
-  <div class="output">
-    <p>{{output}}</p>
+  <div class="container">
+    <h1>{{resultTitle}}</h1>
+
+    {% for group in chunked %}
+
+      <p>{{ group }}</p>
+
+    {% endfor %}
+
   </div>
 
 {% endblock %}
