--- a/server/views/index.html
+++ b/server/views/index.html
@@ -12,18 +12,18 @@
   <form method="post" action="/submit" class="form-horizontal">
     <div class="form-group">
       <label for="inputTotalPeople" class="col-sm-2 control-label">Total</label>
-      <div class="col-sm-10">
+      <div class="col-sm-5">
         <input type="number" name="totalPeople" class="form-control" placeholder="Enter the total number of people...">
       </div>
     </div>
     <div class="form-group">
-      <label for="inputChunks" class="col-sm-2 control-label">Chunks</label>
-      <div class="col-sm-10">
+      <label for="inputChunks" clazszzss="col-sm-2 control-label">Chunks</label>
+      <div class="col-sm-5">
         <input type="number" name="chunkSize" class="form-control" placeholder="Enter the desired number of chunks...">
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
+      <div class="col-sm-offset-2 col-sm-5">
         <button type="submit" value="Chunk" class="btn btn-default">Chunk!</button>
       </div>
     </div>
