--- a/server/views/index.html
+++ b/server/views/index.html
@@ -9,7 +9,7 @@
     <h1>{{ title }}</h1>
   </div>
 
-  <form method="post" action="/submit" class="form-horizontal">
+  <form method="post" action="/" class="form-horizontal">
     <div class="form-group">
       <label for="inputTotalPeople" class="col-sm-2 control-label">Total</label>
       <div class="col-sm-5">
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="inputChunks" clazszzss="col-sm-2 control-label">Chunks</label>
+      <label for="inputChunks" class="col-sm-2 control-label">Chunks</label>
       <div class="col-sm-5">
         <input type="number" name="chunkSize" class="form-control" placeholder="Enter the desired number of chunks...">
       </div>
